# TraceLibCpp

./: CMakeLists.txt  README.md  Readme.txt
client/: TraceLogger.cpp  client.cpp
server/: server.cpp
trace_logger/: TraceLogger.h
